# configuration

./: .gitignore  CMakeLists.txt  build_project.sh
project/: README.md  VoltageMonitor
src/: flow copy.json  flow.json  flow.yaml  flow_tmp.json  test_balance_tree.c  test_balance_tree_simple.c  test_integration.c  test_yaml_fix.c  txt.txt
src/app/: actuator.c  func_registry.c  list_cfg_loading.c  tree_utils.c
src/combination_lib/: comb_1.yaml  comb_2.yaml
src/include/: actuator.h  ck_queue.h  func_public.h  func_registry.h  list.h  list_cfg_loading.h  tree_utils.h
src/main/: main.c  test_main_save.c
src/mode_lib/: branch.c  mode_1.c  mode_2.c  mode_3.c  sleep_mode.c
